Build: Added two more quotation templates and sent for the review

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,3 +50,24 @@
     </div>
   </body>
 </html>
+
+<div class="footer">
+  <div>
+    <p class="semiBoldText">
+      <span class="boldText">Name:</span> ${ customerName ? customerName :
+      "..........................." }
+    </p>
+    <div class="address">
+      <p><span class="boldText">Address:</span></p>
+      <p class="semiBoldText">&nbsp;${address}</p>
+    </div>
+  </div>
+  <div>
+    <p class="semiBoldText">
+      <span class="boldText">Mobile No:</span> ${displayNumber}
+    </p>
+    <p class="semiBoldText">
+      <span class="boldText">Warranty:</span> ${displayNumber}
+    </p>
+  </div>
+</div>
